# 8bit-pixies.github.io

./: Makefile  README.md  _quarto.yml  a-simple-feature-store.html  a-simple-feature-store.md  about.qmd  dracula-highlighting.css  evaluating-cdfs.html  evaluating-cdfs.md  gentleboost.html  gentleboost.md  imgui.md  index.css  index.html  index.md  maturin-binaries.html  maturin-binaries.md  pyproject.toml  template.html
_site/: listings.json  search.json
docs/: about.html  index.html  listings.json  search.json
docs/posts/a-neural-probabilistic-model/: index.html
docs/posts/a-simple-feature-store/: index.html
docs/posts/alpine-pyscript-managing-state/: index.html
docs/posts/challenge-with-llms/: index.html
docs/posts/coloring-sprites/: index.html
docs/posts/dice-less-table-top-rpg-system/: index.html
docs/posts/evaluating-cdfs/: index.html
docs/posts/gentle-boost/: index.html
docs/posts/life-well-lived/: index.html
docs/posts/natural-language-ui/: index.html
posts/a-neural-probabilistic-model/: index.qmd
posts/a-simple-feature-store/: index.qmd
posts/alpine-pyscript-managing-state/: index.qmd
posts/challenge-with-llms/: index.qmd
posts/coloring-sprites/: index.qmd
posts/dice-less-table-top-rpg-system/: index.qmd
posts/evaluating-cdfs/: index.qmd
posts/gentle-boost/: index.ipynb  index.qmd
posts/life-well-lived/: index.qmd
posts/maturin-binaries/: index.qml
posts/natural-language-ui/: index.qmd
posts/prefect-thoughts/: index.qmd
posts/sortie/: index.qmd
posts/suno-bark/: index.qmd
posts/welcome/: index.qmd
(+3 files in other folders)
