[tool.poetry]
name = "8bit-pixies-github-io"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "chipmunk_pixel"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "*"
quarto = "*"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
